--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  golden_toolkit: ^0.15.0
   http: ^1.1.0
 
 dev_dependencies:
