--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.1.2 <4.0.0'
 
 dependencies:
+  
   equatable: ^2.0.5
   flutter:
     sdk: flutter
@@ -15,6 +16,8 @@ dependencies:
   http: ^1.1.0
 
 dev_dependencies:
+  integration_test:
+    sdk: flutter
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
